--- a/css/style.css
+++ b/css/style.css
@@ -95,11 +95,14 @@ main.mountain{
 	text-align: center;
 	min-width:250px;
 	min-height: 100px;
-	background-color: #6d6875;
+	background-color: #FFFFFF;
 	border: #f4f3f9;
 	border-radius: 5%;
-	color: white;
+	color: #FFFFFF;
+/* text-align: center; */
+	/* color: white; */
 	margin: 3% 15% 3%;
+	padding-top: 30px;
 }
 footer{
 	background: linear-gradient(5deg, rgba(251, 251, 251, 0.685) 53%, rgba(251,251,251,1) 100%), url("../img/footer-pexels-invisiblepower-1076885.jpg") center / cover no-repeat;
