--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 @import "null.css";
-@import url('https://fonts.googleapis.com/css2?family=Lobster&family=Lato&family=Montserrat+Alternates:wght@400;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lobster&family=Montserrat+Alternates:wght@400;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap');
 body.body-mountain{
 	font-family: Montserrat;
 	font-size: 20px;
@@ -122,7 +123,7 @@ body.article1{
 
 }
 
-h1.article1{
+h1.h1-article1{
 	font-weight: 900;
 	font-size: 46px;
 	line-height: 1.3;
